form spacing fix

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -186,3 +186,9 @@ label {
   margin-bottom: 1vh;
   text-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
 }
+
+@media (max-width: 768px) {
+  .form-element{
+    width: 300px;
+  }
+}
