--- a/client/src/components/PageTitle/page-title.css
+++ b/client/src/components/PageTitle/page-title.css
@@ -26,7 +26,7 @@
     justify-content: center;
     align-items: center;
     height: 235px;
-    width: 315px;
+    width: 300px;
     top: 0;
     animation-name: fadeIn;
     animation-duration: 0.7s;
