--- a/client/src/pages/Attend/attend.css
+++ b/client/src/pages/Attend/attend.css
@@ -124,7 +124,7 @@
   }
 
   .attend-text {
-    width: 225px;
+    width: 300px;
     font-size: 16px;
     margin-top: 3vh;
     font-weight: 400;
